✅ Complete MVP-2.2.4: Progressive Voice Enhancement
🎤 Voice Recognition Features:
- Progressive enhancement: Web Speech API → Groq Whisper → Manual
- Auto-fallback on errors with seamless method switching
- Browser compatibility detection and graceful degradation
- Real-time transcription with confidence scoring
- Free STT via Web Speech API and Groq Whisper

🔧 Technical Improvements:
- Complete voice module with hooks and services
- VoiceManager for capability detection and method selection
- Audio recording with upload progress tracking
- Whisper integration via Supabase Edge Function
- Environment configuration for voice features

📱 User Experience:
- Full-screen voice overlay with visual feedback
- Live transcript display during recording
- Method switching with user notification
- Error handling with automatic fallback
- Mobile-optimized voice capture

🏗️ Infrastructure:
- Added voice/ module with comprehensive architecture
- STT Edge Function with Groq Whisper integration
- Audio upload service with progress tracking
- Voice capability detection and management
- Updated environment configuration

This completes the voice recognition system with full progressive enhancement,
ensuring all users can capture expenses via voice regardless of browser support.

--- a/env.example
+++ b/env.example
@@ -5,6 +5,9 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 # OpenRouter API (for AI classification)
 OPENROUTER_API_KEY=your_openrouter_api_key
 
+# Groq API (for STT fallback)
+GROQ_API_KEY=your_groq_api_key
+
 # FX API Configuration
 FX_API_KEY=your_fx_api_key
 FX_API_URL=https://api.exchangerate.host
